--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -7,7 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>{{title}}</h1>
-    <p>{{message}}</p>
+    {{>header}}
+    <img src='/img/robot.png' alt='Picture of a robot.' />
+    {{>footer}}
   </body>
 </html>
