--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -4,11 +4,13 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <link rel='stylesheet' href='/css/styles.css' />
-    <script src='/js/app.js'></script>
     <title>Document</title>
   </head>
   <body>
-    <h1>{{title}}</h1>
-    <p>Created by {{name}}</p>
+    {{>header}}
+
+    <p>{{message}}</p>
+
+    {{>footer}}
   </body>
 </html>
