--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -4,12 +4,15 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <link rel='stylesheet' href='/css/styles.css' />
-    <title>Document</title>
+    <link rel="icon" href="/img/weather.png">
+
+    <title>Help</title>
   </head>
   <body>
-    {{>header}}
-
-    <p>{{helpText}}</p>
+    <div class="main-content">
+      {{>header}}
+      <p>{{helpText}}</p>
+    </div>
 
     {{>footer}}
   </body>
