--- a/web-server/templates/views/404.hbs
+++ b/web-server/templates/views/404.hbs
@@ -4,11 +4,16 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <link rel='stylesheet' href='/css/styles.css' />
-    <title>Document</title>
+    <link rel="icon" href="/img/weather.png">
+
+    <title>404</title>
   </head>
   <body>
-    {{>header}}
-    {{errorMessage}}
+    <div class="main-content">
+      {{>header}}
+      {{errorMessage}}
+    </div>
+
     {{>footer}}
   </body>
 </html>
