--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -5,10 +5,14 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <link rel='stylesheet' href='/css/styles.css' />
     <script src='/js/app.js'></script>
-    <title>Document</title>
+    <link rel="icon" href="/img/weather.png">
+    <title>Weather</title>
   </head>
   <body>
+    <div class="main-content">
     {{>header}}
+      <p>Use this site to get your weather</p>
+    </div>
     {{>footer}}
   </body>
 </html>
