--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -6,15 +6,22 @@
 
     <link rel='stylesheet' href='/css/styles.css' />
     <link rel="icon" href="/img/weather.png">
-    <script src='/js/app.js'></script>
 
     <title>Weather</title>
   </head>
   <body>
     <div class="main-content">
-    {{>header}}
+      {{>header}}
+
       <p>Use this site to get your weather</p>
+
+      <form>
+        <input type='text' placeholder="Location">
+        <button>Search</button>
+      </form>
     </div>
     {{>footer}}
+
+    <script src='/js/app.js'></script>
   </body>
 </html>
