--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -11,7 +11,8 @@
   <body>
     <div class="main-content">
       {{>header}}
-      <img class="portrait" src='/img/robot.png' alt='Picture of a robot.' />
+      <p>This site was created by Ylva Turner. It uses data from mapbox.com and weatherstack.com.</p>
+      <img class="portrait" src='/img/profilepic.jpg' alt='Picture of a robot.' />
     </div>
 
     {{>footer}}
